# django_netflix_clone

./: .env.Example  .gitignore  pyproject.toml
accounts/: admin.py  models.py  services.py
accounts/migrations/: 0001_initial.py  0002_alter_customuser_email_alter_customuser_is_admin.py
commons/: choices.py  models.py
core/: settings.py  urls.py
core/plugins/: allauth.py
movies/: admin.py  models.py  services.py  urls.py  views.py
movies/migrations/: 0001_initial.py  0002_alter_video_movie.py
movies/static/movies/js/: movie.js
movies/templates/movies/: detail.html  index.html  showMovie.html
profiles/: admin.py  models.py  services.py  urls.py  views.py
profiles/migrations/: 0001_initial.py  0002_remove_profile_maturity_rating.py  0003_profile_maturity_rating_alter_profile_identifier.py
profiles/templates/profiles/: create.html  index.html
templates/: base.html  index.html
templates/account/: login.html  signup.html
templates/partials/: _footer.html  _head.html  _navbar.html
templates/static/css/: style.css
templates/static/js/: script.js
